<resources>
    <string name="Day">D</string>
    <string name="Month">M</string>
    <string name="Year">Y</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">接受</string>
    <string name="action_settings">Settings</string>
    <string name="agc_039385256A8E064A3FBA0E5DC382B8F03961789D7A12A9D0BB248FFEDD6D1470">00A3E72C16DA1E5472336F69544B050AE7BBD45EAE29645119AECA57A677E06925B83D983178E72D52D3C2DE1FFF52EEA8DC95353FF797DC76A507CEF6E849D20DFAC2D1A78041736C1AD89F8BB29A0361</string>
    <string name="agc_0DC3A56C1AC03D404A409264B0AED075A38F9EB082F5057704EA33D4B5B9B9C9">004AB595EB3AFFE8CD23F860F022324703500DF9E8A4A127C6EBEFDA192F5108F696F8BFAED207460353B10B130F3F41F9D2B7FC72C7FE1D7CC5C384B8D756181170AF1955A77970CDDAE3BC070E86318B45484160538AA07CE6CD474838C1208D</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">00E584594C306255741B5016093889CCCB124FD1EC91D97ED12B02334271B9EE17D155BC1208DFDFBC4FFF00F7D520CFA7DC9D9D121FE7D9836D3B1F089EE4344F378653D0F0E9A49AE5B02AAD7A8D72142F3AB5F38742BD3FE9F1FD1EE0546ED5</string>
    <string name="agc_1DAF2070F644F3B6CEA88178D5DA98CE4A7A380B545F415B1A228519B1E134C8">0053791FB2B8252439E60008066E5A799680F2A245C398A941751899C3909520D19E849D00C1D4A065E958E655D6788FEC</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">C2142A6A923A309364AD364B0CA2B378</string>
    <string name="agc_2CF9BE2236D08368B0649449A8546AA52B2038D467F630312C146F9EA821AC2E">00E0FAFC3BF2732052AD99195588BFDB06A1AF4CDF28CCFA7D0236EC67B6D36AA5</string>
    <string name="agc_3C5E7223FA10AEB1FFA081C86F85F3C23A0526877FBC6A3A77C4D36A7BA9AAB3">000D24CE1450E932AD32E4357DED71628FE615EBC0605400FCF43D1ABA0FEE7C8DC22E5BF6334802BDFBC284D05FC48865</string>
    <string name="agc_3D7A0A63AA0374539D58FF4B3034CF00D2353E3A780A0F85C35566E329358934">0039062F690AC523845BC1D71801803AF86956259A648446E135EAB2C9C3267E00C532C028C3D9F8C23D830E6326F2E331F4684CF8F9AB16191FAB39B6171181F88187A3A262CEBB02B11D3D1E568DB51C477EF16173CF3549A7BB7AD0639E72D1</string>
    <string name="agc_42CFA4FE0F87541B3B3F9793F5D829BE381703BB99853CCC25D018996F251536">008A94DFBB233ED699D982B08999D893AA42E190078F2235BDAEF346128902B889</string>
    <string name="agc_432BA784B7D2E3A6C73AB69659D3300DC6258E318543A10B50EA4B770C67DAB3">00EC9AFEA07255FDFE7A05CA8C74083D7B4941818999AA2A21591E5257969851695B25CFF5BB513A5C4CCD08DA874CD6B93103862FACAAA0EFD70A36ED664EDADE</string>
    <string name="agc_4A1001369614B0D938752C6AB4967DE352A3ADD13CAE741A7DF78EE728F74136">00E37D1945B7CEE25D34DE2891BC8E09392EE9A29E88F404BDED5B38D9D7B9D2D1</string>
    <string name="agc_4D79CE1E9E81D44FFC3CBFEC80D073F18409AAC96E2DAFB11951005E99B02EDB">00C5CBE0418AD754CB54183049EFA700062549D6B2937E96A1D002AB38E4F255978231D2899C0E9A3CACA79292406ACB9B5B0E56B30B2260EEF75C912F4C752D5B</string>
    <string name="agc_4E59F3D37D339A997CACA4A0C457DAA94A1F044555D950F1F9835B0B6F600D38">00DBD00F106BC5924B80865AF194DC48FC57449AF3816F688A8A162D265B0887AF</string>
    <string name="agc_52C6C717F2BEA9936D7DEDC27E412B9E7AC9A6642A6D0AEE353B2B14737100F5">009E8D5E3D861717F58722D12D1A7965230973B5688795463B82D6B262FBFA170F9876747E4ECF802584D5846DAEF5E5DF</string>
    <string name="agc_5B1EF301F6E8D26793B9699E972C1FE3B4563543360C2A380F9C42CED9967B7B">000D92A7ED920331DE02394E168CA54D6546D2EB0FC58ADDF2358CDC63D6AC6FE6553CA5071290EEC54CEDA7D259E9B625CF80E32984C63BDEE0C46600090B9A5C767712FCB25468007F37F20288A1C61005673CFE1639C1BA0C92A2FF338FF23F</string>
    <string name="agc_5B5AF298A58B98DB86A04DB0E3B1924F7EAC7A14CA781F042E5F999BD413CC9E">00446543D696E4ED9089B446986CC1B5368D20B597755A9A58C883014B980E2C0146AF893090D35F6058296DDDA1DCD8AF</string>
    <string name="agc_63F3255D837430EC4C799B2B5A8091A554A101C6FAC114907463E723AF33B544">007FFCDCAEFE950D950D9C40EFD4EB9F290CA7EC40502B1C3913AC3582ED3B02A3D1173DF61A64B70F659760E245F1F2C5B799DBC8F86E500AFB9E50C42D53168AD6841F39E10B8D5E8E1634F90FCAE94E533F14914DBB1DFD4D2E70A0744FF5FC540E3B99E3A8D2075BCCD2ED4DD46B35FA652EFB4B955A68CF9AD5379C5E84A671B85BB872F824F9BA23BA7BA0688731945EE9A007D5C0CEC3785A8342B03D6C0FB560E6962AB12EA4A83DE6F61884345E6DA47DDEEC90F21D98EBF4D82189B970BADEE79EFE053A953D0B37F616469BCC1E63CFD334C6AF430C8094716B016B1120EB331D6FE1A880CCC2810133D723</string>
    <string name="agc_66412D70318648FA3BDD00A3CB2E73EE439F788EBA8010232B3B145A1ADE18F4">002907789CB898DEE8065C08B2AA0E7FB06CA166CBCA1202444B33D84D1964C3ACB4AD9AC4A4A9EDF1C35F13AD8416C2D8</string>
    <string name="agc_69589FA8E5257AA8E3C477503B5586F4B4981C77F69B612318E3FC7AF1B00890">00C854F9DCBBCB5FB54891C7C738F3EC3EC384BA853AF1E633A96B7C21EEF95EC888265380045AC4BB7DC31968F7133BAA</string>
    <string name="agc_6D239E4C2FF1354F6DBB62ED715B0B2A4058A2C1B368EB9F5FAF8B457ED28FA6">0008DE5EC2140AF2B673AF61232D63A2E937396BD5535BD9E9AFD1DF067767D65904E392F9B8DFAF64A90E1CD7379A49B3C2E7AE33F68B9BE6C8CB5150715CAFE8</string>
    <string name="agc_6DC2F1E7B3508CE97B8A34B184EAD19FADAAC83160422DE0BA2F78B0438C6A98">005228D1237014498D50D95229AEF0207AE0986FCCD4D5B3E52ECDC74043865BA39BA38BEA62118071BD773D7190D5C8C4</string>
    <string name="agc_7946AE46AB6C7F8CBDCAF61B99109C7C5309E95125FEA7458FBF603EC34F79F0">0089295D7E2101C7EBB2D681869A3F6613F54FFDE7B6A86F09424D38732A0B16FC</string>
    <string name="agc_836CE23119A6E21FA622B66B25341D1D32735FAA2839B33D60C4D59B7AD62151">00298EC4A2C7967121DF252A2B46C66284FAF435D0D52B18D3A458614D0350499B2F5381648FDDAB0E4302D5FA0B73660FA7A7C00B463E78C43F3DBCB66FF503B7</string>
    <string name="agc_840FE2348B9312C51373EFB2E2F030D10C43688DDE98467C8DD63AC7DC1855AB">00ED7A6C4B108EA89851A0C78B98E235CA240FD9365090DFF8FABC8A9EE22BF0EB</string>
    <string name="agc_864E57EAF6D5DB70BE861700AFF6C17A93A9D202732BCB4048B0CDBB6EBF578F">00D300290A1736A2B94057B2E2503833F7AD9D66CE98FFB7D13A3492B754953FDBA14E3A73967BEE3E7FE792862F36E2B990E1FEA79347A2F0FC15F52B7D4C718A</string>
    <string name="agc_8CBEB54DD45F5D2D07C517A93D2C07AC37E088876F07FDDF2D74CEFF5500AE68">00AA0A4A97671CE37528D3ADA362FEE4FC11DE98397EAC81EF8676176AC4FD75992E65FE9C24A62A31D9182CFF7B87743A</string>
    <string name="agc_8EC943399EB9730C69A7B8E4E46D24911E8F900AC2F52A3DF251327694CD8EFA">005ABE753D44921527B8119E4569B355710E37B75E06DAFC366BAB709856F1383199A34003E4DE5511027AF758F5EDADFB65A34DD3DB49778F7CAEF9EABF07260B</string>
    <string name="agc_943F28EFD067BBA193A2BABED8B2DCC2AB346B483A7A7FFE4EEF97B6A6E8E95B">00F50F6C3D3F8611B7403C4CA55C9EEC00844C82A50240F2C7FB89E1D9D7DDF2573568E6CCCB71EE70CA09E05EB3E22159</string>
    <string name="agc_B1D468BFE76734080F76B2B7AFCD4E74561AE0CB6D3E48BC35857EFB95EA0BA0">00BD0360E594130D2FF30BB871C9788C55DD7850D6B1C6DB8E16424AB22EAA607F00F44439685E396A96B95BE6B387579C</string>
    <string name="agc_B306EDA810E24A85B9E96B29457CBA22E7AB7624F9F2D241D325EAA1B74DAB4B">00DB612B1BC914C735AA891D88535B7248E400C9BD9547B7AB8B2B7BFCD3D2771B18FFF19A1577197B334164BFD114E73765445D24AF143A4561371F8DE778A9F3C65C4DE5449F021803330433F67956C524CD85F609F10E53300CC35A3EFE1ABBC1FA86DDD0AFDCFA22C0CB3F55BC018A</string>
    <string name="agc_B67855847386884DB0CC7F366F0BDBE5590016B80BB3F5DD82FCAB6DA71B308E">00650DFA5C4214D069570400A75EF1E446016C671683DDCCFA49A8463516E60658FA9E9A8DAD00A46478A381AF9E1A7C1E20F31587D84C7FED3771290D91690A26</string>
    <string name="agc_B9EAB77AB7FDFB9A9577EEAC5B15C13D00CD198883FD8D2BCF6CD048B1DB8EAC">B81AB1472ABD8918CC6AC36BD3AA416A</string>
    <string name="agc_BC901C8B36CDC03EBB04723478E129DF780D638FD72D54B370EA8D3B66E0F004">00984DE0B15CFEB357AE582EB898D3DA7776E024DF80F9565DBF13F9F566BDE7CD97085CA62CD65FA2057A338186EBC75CC48813A7584DA1717C98FBD75DDB911C68C171A2D8B6CCC84E03F392D4C196F5E757582AD78EC4924E4EBFCDE73651BA</string>
    <string name="bind_account_detail">"微信号快速登录需要您已有的电子书包账号
与该微信号进行绑定"</string>
    <string name="bind_account_text">绑定书包账号</string>
    <string name="bind_btn_name">绑定</string>
    <string name="bind_pwd_hint">请输入8位以上，大小写字母数字组合</string>
    <string name="bind_register_name">没有账号，马上注册</string>
    <string name="book_author">Loweice</string>
    <string name="book_title">Adventure</string>
    <string name="change_pwd_edit_tips">请输入原密码6-16位英文或数字</string>
    <string name="change_pwd_edit_tips2">新密码长度8位以上,必须包含大小写字母和数字</string>
    <string name="change_pwd_edit_tips3">请确认新密码</string>
    <string name="change_pwd_sumbit">提交</string>
    <string name="delete_cache">Delete Cached</string>
    <string name="delete_epub">Delete</string>
    <string name="login_find_password">找回密码</string>
    <string name="login_phone_email_input_hint">请输入手机号码/邮箱/证件号</string>
    <string name="main_foot_title_exam">考试</string>
    <string name="main_foot_title_me">我的</string>
    <string name="main_foot_title_operation">教学</string>
    <string name="main_foot_title_page">首页</string>
    <string name="main_foot_title_study">医视在线</string>
    <string name="open_epub">Open</string>
    <string name="privacy_btn_cancel">不同意,并退出应用</string>
    <string name="privacy_btn_sure">同意</string>
    <string name="privacy_title">感谢您使用医学电子书包！</string>
    <string name="see_details">Move To The First</string>
    <string name="sortByAuthor">By Author</string>
    <string name="sortByDownload">No Sort</string>
    <string name="sortByLastRead">By Last Read</string>
    <string name="sortByTitle">By Title</string>
    <string name="sortOption">Sort Books</string>
    <string name="unbind_close">关闭</string>
    <string name="unbind_dialog_cancel">解绑微信</string>
    <string name="unbind_dialog_confirm">再考虑一下</string>
    <string name="unbind_dialog_detail">"解绑微信账号后，您将无法继续
使用该微信登录电子书包"</string>
    <string name="unbind_dialog_title">解绑微信账号</string>
    <string name="unbind_stated">已绑定</string>
    <string name="unbind_weChat_num">微信号:</string>
    <string name="whell_btn_cancel">取消</string>
    <string name="whell_btn_sumbit">确定</string>
    <string name="whell_text">切换信息</string>
</resources>