<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/home_box" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="20.0sp" android:textColor="#ff153c03" android:layout_gravity="center_horizontal" android:id="@id/titleTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="10.0dip" android:text="@string/book_title" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff505050" android:layout_gravity="right" android:id="@id/authorTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/book_author" />
    <Button android:id="@id/OpenButton" android:background="@drawable/home_box" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginBottom="10.0dip" android:text="@string/open_epub" />
    <Button android:id="@id/SeeDetailsButton" android:background="@drawable/home_box" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginBottom="10.0dip" android:text="@string/see_details" />
    <Button android:id="@id/DeleteButton" android:background="@drawable/home_box" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginBottom="10.0dip" android:text="@string/delete_epub" />
    <Button android:id="@id/DeleteCacheButton" android:background="@drawable/home_box" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginBottom="20.0dip" android:text="@string/delete_cache" />
</LinearLayout>