<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/home_box" android:paddingLeft="15.0dip" android:paddingTop="20.0dip" android:paddingRight="15.0dip" android:paddingBottom="5.0dip" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff202020" android:layout_gravity="center" android:id="@id/sortOptionTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/sortOption" />
    <Button android:id="@id/sortByTitleButton" android:background="@drawable/home_box" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginBottom="10.0dip" android:text="@string/sortByTitle" />
    <Button android:id="@id/sortByAuthorButton" android:background="@drawable/home_box" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginBottom="10.0dip" android:text="@string/sortByAuthor" />
    <Button android:id="@id/sortByLastReadButton" android:background="@drawable/home_box" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginBottom="10.0dip" android:text="@string/sortByLastRead" />
    <Button android:id="@id/sortByDownloadButton" android:background="@drawable/home_box" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginBottom="20.0dip" android:text="@string/sortByDownload" />
</LinearLayout>