<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@android:color/transparent" android:padding="30.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/shape_update_dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimens_30" android:text="@string/unbind_dialog_title" />
        <TextView android:textSize="16.0sp" android:textColor="@color/gray" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/dimens_10" android:text="@string/unbind_dialog_detail" />
        <View android:background="@color/gray" android:layout_width="fill_parent" android:layout_height="@dimen/dimens_1px" android:layout_marginTop="@dimen/dimens_30" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/dimens_50">
            <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_cancel" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/unbind_dialog_confirm" android:layout_weight="1.0" />
            <View android:background="@color/gray" android:layout_width="@dimen/dimens_1px" android:layout_height="fill_parent" />
            <TextView android:textSize="16.0sp" android:textColor="@color/red" android:gravity="center" android:id="@id/tv_confirm" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/unbind_dialog_cancel" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>